# strike

./: meson.build
src/: Makefile  carray_wrapper.hpp  compile_commands.json  defines.hpp  destroy.hpp  main.cpp  meson.build  strike
src/.cache/clangd/index/: main.cpp.9CA267BCD00B914B.idx
src/compositor/: compositor.cpp  compositor.hpp
src/globals/: globals.cpp  globals.hpp
src/keyboard/: keyboard.cpp  keyboard.hpp
src/listener/: listener.cpp  listener.hpp
src/output/: output.cpp  output.hpp
src/renderer/: renderer.hpp
src/surface/: surface.cpp  surface.hpp
wlroots_headers_for_cpp/: wlr_scene.h
