exe = executable(
  'strike',
  'main.cpp',
  './listener/listener.cpp',
  './output/output.cpp',
  './globals/globals.cpp',
  './compositor/compositor.cpp',
  './surface/surface.cpp',
  './input/keyboard.cpp',
  './input/seat.cpp',
  './util/util.cpp',
  install : true,
  dependencies : dependencies,
)
